# llm-evaluation-framework

./: .env.example  .gitignore  .gitlab-ci.yml.example  README.md  render.yaml
.github/workflows/: llm-eval.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py
backend/app/services/: attack_library.py  datasets.py  deepeval_metrics.py  engine.py  judge.py  model_clients.py  quality_metrics.py  reports.py  tracing.py
backend/tests/: test_reports_and_judge.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
scripts/: resume_evidence.py  run_deployed_evidence.py  smoke_eval.py
sdk/node/: index.ts
sdk/python/: llmeval_client.py
