[project]
name = "llm-evaluation-framework"
version = "0.1.0"
description = "Automated LLM evaluation and red-teaming platform with MART-style loops."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "langsmith>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
]
eval = [
  "deepeval>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
